--- a/HealingBeacon/app/src/main/res/layout/activity_prescribed_drugs.xml
+++ b/HealingBeacon/app/src/main/res/layout/activity_prescribed_drugs.xml
@@ -6,10 +6,17 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="sithlords.com.healingbeacon.PrescribedDrugsActivity">
 
+    <TextView
+        android:id="@+id/prescribed_drugs_title"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Prescribed drugs"/>
+
     <ListView
         android:id="@+id/prescribedDrugsList"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"
+        android:layout_below="@id/prescribed_drugs_title">
     </ListView>
 
 </RelativeLayout>
